[package]
name = "asgn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
users = "0.11.0"
signal-hook = "0.3.14"
toml = "0.5.10"
serde = "1.0.152"
serde_derive = "1.0.152"
structopt = "0.3.26"
dirs = "5.0.1"
itertools = "0.12.0"
termion = "2.0.3"
walkdir = "2.4.0"
tempfile = "3.8.1"
